# MJAtomic

./: .dockerignore  .env.example  .gitignore  Architecture, Patterns, and Best Practices Manual V1.0.md  Dockerfile  README.md  agents.md  check_git_sync.ps1  clean_docker.ps1  codigo.txt  force_rebuild.ps1  guideline.md  inspect_package.py  package-lock.json  poetry.lock.rej  pyproject.toml  pyproject.toml.orig  pyproject.toml.rej  start_app.ps1  start_local.ps1  stop_app.ps1  stop_local.ps1  verify_import.py
docs/: RELATORIO_AUDITORIA.md
frontend/: index.html  package-lock.json
frontend/src/: App.vue  style.css
infra/: dev.Dockerfile  docker-compose.yml  docker-compose.yml.orig  docker-compose.yml.rej  sandbox.Dockerfile
prs/: pr-10.diff  pr-10.patch  pr-11.diff  pr-11.patch  pr-12.diff  pr-12.patch  pr-13.diff  pr-13.patch  pr-14.diff  pr-14.patch  pr-15.diff  pr-15.patch  pr-16.diff  pr-16.patch  pr-17.diff  pr-17.patch  pr-18.diff  pr-18.patch  pr-19.diff  pr-19.patch  pr-20.diff  pr-20.patch  pr-9.diff  pr-9.patch
referencias/: MJProjectGeneratorPrompts.txt  MJProjectGeneratorReferencias.txt  arquiteto.txt  cache.md  codigo.txt  design.md  entendimento.md  limites.md  modelos.md
referencias/lmstudio/: Cancelling Predictions.md  Configuring the Model.md  Embedding .md  Get Context Length.md  Get Load Config.md  Get Model Info.md  List Downloaded Models.md  List Loaded Models.md  Manage Models in Memory.md  Speculative Decoding.md  Structured Response.md  Text Completions.md  The act() call.md  Tokenization.md  Tool Definition .md  Working with Chats  .md  chat.md  imageinput.md  replusage.md  setup.md
scripts/: create_pgvector_table.ps1  drop_pgvector_table.py  fix_pgvector.ps1  init_pgvector.ps1  inspect_pgvector_api.py  quick_test_vector.py  test_vector.ps1
src/agents/: __init__.py  architect.py  architect_prompt.md  devops.py  devops_prompt.md  fullstack.py  fullstack_prompt.md  reviewer.py  reviewer_prompt.md  tech_lead.py  tech_lead_prompt.md
src/agents/architect/: agent.py
src/agents/fullstack/: agent.py  components.py  prompt.md
src/agents/reviewer/: agent.py  prompt.md
src/agents/tech_lead/: agent.py  (+1 more)
src/core/: config.py  database.py  factory.py  interfaces.py  logger.py  models.py  orm_models.py  orm_models.py.rej  repositories.py
src/frontend/: index.html
src/models/: __init__.py  database.py  enums.py
src/scripts/: reset_vector_db.py  seed_knowledge_base.py
src/tools/: __init__.py  core_tools.py  file_io.py  git_tool.py  secure_executor.py
src/utils/: logging_config.py
tests/: conftest.py  test_integration.py
tests/e2e/: test_app_flow.py  test_frontend.py  test_hitl.py
tests/integration/: test_agent_flow.py  test_api_endpoints.py  test_api_persistence.py  test_full_agent_chain.py  test_fullstack_isolation.py  test_secure_executor_persistence.py  test_worker_graph.py
tests/unit/: test_architect.py  test_architect_agent.py  test_core_tools.py  test_devops_agent.py  test_embedding_provider.py  test_file_io.py  test_fullstack_agent.py  test_git_tool.py  test_graph.py  test_indexer.py  test_init_db.py  test_llm_ollama.py  test_llm_provider.py  test_repositories.py  test_reviewer_agent.py  test_secure_executor.py  test_tech_lead_agent.py  test_vector_store.py  test_vector_store_recovery.py
(+31 files in other folders)
