[tool.poetry]
name = "dev-agent-atomic"
version = "0.1.0"
description = "Autonomous development agent focusing on TDD and atomic steps"
authors = ["DevAgent Team"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
celery = "^5.3.6"
langchain-core = "^1.1.0"
langchain-google-genai = "^2.0.9"
langchain-text-splitters = "^1.0.0"
langchain-huggingface = "^1.1.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
docker = "^7.0.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.17"}
redis = "^5.0.1"
python-multipart = "^0.0.7"
sqlalchemy = "^2.0.0"
langgraph = "^1.0.4"
langgraph-checkpoint = "^3.0.1"
langchain-community = "^0.4.1"
langchain-postgres = "^0.0.16"
langgraph-checkpoint-postgres = "^3.0.1"
langchain-ollama = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
